2.2.5/_sources/gallery/misc/agg_buffer.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_misc_agg_buffer.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_misc_agg_buffer.py:


==========
Agg Buffer
==========

Use backend agg to access the figure canvas as an RGB string and then
convert it to an array and pass it to Pillow for rendering.



.. image:: /gallery/misc/images/sphx_glr_agg_buffer_001.png
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /home/tcaswell/source/p/mlp22x/examples/misc/agg_buffer.py:33: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead
      X = np.fromstring(s, np.uint8).reshape((h, w, 3))






|


.. code-block:: default


    import numpy as np

    import matplotlib.pyplot as plt
    from matplotlib.backends.backend_agg import FigureCanvasAgg


    try:
        from PIL import Image
    except ImportError:
        raise SystemExit("Pillow must be installed to run this example")

    plt.plot([1, 2, 3])

    canvas = plt.get_current_fig_manager().canvas

    agg = canvas.switch_backends(FigureCanvasAgg)
    agg.draw()
    s = agg.tostring_rgb()

    # get the width and the height to resize the matrix
    l, b, w, h = agg.figure.bbox.bounds
    w, h = int(w), int(h)

    X = np.fromstring(s, np.uint8).reshape((h, w, 3))

    try:
        im = Image.fromstring("RGB", (w, h), s)
    except Exception:
        im = Image.frombytes("RGB", (w, h), s)

    # Uncomment this line to display the image using ImageMagick's
    # `display` tool.
    # im.show()


.. _sphx_glr_download_gallery_misc_agg_buffer.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: agg_buffer.py <agg_buffer.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: agg_buffer.ipynb <agg_buffer.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
